			  - 2003-05-06:  The MySQL port is now always appended to the hostname during connection as a speed optimalisation  (Niels)
			  - 2003-05-06:  The dbQuery() function now automatically connects to the database if there isn't a connection available yet, in order to help prevent unused connections  (Niels, thanks to Doru Petrescu)
			

v 2.0rc3		+ Added a cron replacement for users who don't have access to the cron utility for scheduling the maintenance script  (Niels, 2003-01-14)
			+ The database is now checked after an update to make sure the update was succesful. If not an error is shown and the can retry to update  (Niels, 2003-01-15)
			+ phpAdsNew now uses many newly designed icons, also other icons have been updated to match the new icons  (Niels, 2003-02-03)
			+ Updated some of the user-interface, in particular the error messages and help screens  (Niels, 2003-02-03)
			+ It is now possible to append popups and interstitials to individual banners  (Niels, 2003-02-12)
			+ Added support for the MaxMind GeoIP Region Edition database  (Niels, 2003-02-24)
			
			+ Misc changes
			  - 2003-01-12:  Added info about the current version on the Available Updates page  (Niels)
			  - 2003-01-12:  Added flag for Cape Verde  (Niels)
			  - 2003-01-12:  Added PHP code and variable parsing to HTML banner preview  (Niels)
			  - 2003-01-13:  Added variable parsing to external banner preview  (Niels)
			  - 2003-01-14:  Added support for Safari to the browser delivery limitation and adlayer browser detection  (Niels)
			  - 2003-01-21:  All user and admin passwords are now stored as md5 hashes  (Niels)
			  - 2003-01-21:  If an advertiser or publisher wants to change his password he now has to supply his old password and enter the new password twice  (Niels)
			  - 2003-01-22:  <a></a> tags are now hidden from the visitor if no destination URL is specified  (Niels)